--- a/style.css
+++ b/style.css
@@ -78,18 +78,7 @@ header gets hidden by the navbar*/
     background-color: #dddddd;
   }
 
-
-  #vis1 {
-    margin: auto;
-    width: 50%;
-    background-color: rgb(255, 255, 255);
-    padding: 10px;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: center;
-  }
-
-  #vis2,#vis3 {
+  #vis1, #vis2,#vis3,#vis4 {
     margin: auto;
     width: 80%;
     background-color: rgb(255, 254, 254);
